# ares

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION.md  PR_SUMMARY.md  README.md  TESTING.md  TOOL_CALLING.md  advanced_agent_demo.py  ares.example.toml  ares.toml  build.rs  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  fast_agent_ui.py  fix_engine.py  fix_main.py  fix_postgres.py  fly.toml  justfile  kasino.toml  migrate_db.py  pawan.toml  railway.toml  rewrite_postgres.py  session-ses_43bd.md  working_ui.py
.github/workflows/: ci.yml  deploy.yml  docs.yml
agents/: kasino-classifier.toml  kasino-report.toml  kasino-risk.toml  kasino-transaction.toml
config/agents/: bom-automation-scorer.toon  bom-crm-analyst.toon  bom-domain-router.toon  bom-dsprint-surveyor.toon  bom-lifecycle-manager.toon  bom-planner.toon  bom-proposal-writer.toon  bom-router.toon  clearledger-anomaly-detector.toon  clearledger-invoice-processor.toon  dgrow.toon  dinkedin-blog-writer.toon  dinkedin-business-analyst.toon  dinkedin-campaign-planner.toon  dinkedin-email-writer.toon  dinkedin-post-creator.toon  dinkedin-router.toon  dinkedin-strategy-architect.toon  dinkedin-twitter-writer.toon  dotdot-builder.toon  dtune.toon  dwatch.toon  ehb-assessment.toon  ehb-listener.toon  ehb-moderator.toon  ehb-recommender.toon  finance-analyst.toon  finance.toon  gtm-analytics.toon  gtm-market-intelligence.toon  gtm-outreach.toon  gtm-pipeline-manager.toon  gtm-strategy-architect.toon  hr.toon  invoice-processor.toon  invoice.toon  kasino-classifier.toon  kasino-report.toon  kasino-risk.toon  kasino-transaction.toon  (+14 more)
config/mcps/: eruka.example.toon  eruka.toon  filesystem.toon  pom.toon
config/models/: balanced.toon  fast.toon  powerful.toon
config/tools/: calculator.toon  dcrm_create_contact.toon  dcrm_list_contacts.toon  dcrm_list_deals.toon  dcrm_pipeline_analytics.toon  eruka_read.toon  eruka_search.toon  pom_create_dissue.toon  pom_create_sprint.toon  pom_get_current_sprint.toon  pom_list_dissues.toon  pom_list_sprints.toon  pom_update_dissue.toon  web_search.toon
config/workflows/: default.toon  research.toon
crates/ares-vector/: .gitignore  Cargo.toml
crates/ares-vector/src/: collection.rs  config.rs  distance.rs  error.rs  index.rs  lib.rs  persistence.rs  types.rs
crates/pawan/: Cargo.toml
crates/pawan/src/: lib.rs  main.rs
crates/pawan/src/agent/: mod.rs
crates/pawan/src/config/: mod.rs
crates/pawan/src/tui/: mod.rs
crates/pawan/tests/: integration.rs
data/: ares.db
docs/: DEPRECATED_AGENTS.md  DIR-12-research.md  DIR-24_RAG_IMPLEMENTATION_PLAN.md  FUTURE_ENHANCEMENTS.md  GGUF_USAGE.md  KNOWN_ISSUES.md  MCP.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  book.toml
docs/src/: SUMMARY.md  changelog.md  introduction.md
docs/src/api/: agents.md  chat.md  rag.md  research.md  streaming.md  workflows.md
docs/src/enterprise/: admin-api.md  deploy-api.md  multi-tenant.md  v1-api.md
docs/src/getting-started/: authentication.md  models.md  quickstart.md
docs/src/guides/: chat-agent.md  tool-calling.md
docs/src/platform/: errors.md  rate-limits.md  self-hosting.md
hurl/: README.md
hurl/cases/: 00_health.hurl  01_agents.hurl  10_auth_register_login_refresh.hurl  11_auth_negative.hurl  20_chat_and_memory.hurl  21_research.hurl  22_protected_negative.hurl  30_workflows.hurl  40_toon_import_export.hurl
hurl/lib/: env.hurl
migrations/: 000_tenants.sql  001_usage_events_unified.sql  002_kasino.sql  003_tenant_agents.sql  004_agent_runs.sql  005_alerts.sql  006_audit_log.sql  007_core_tables.sql  008_agent_config_versions.sql
scripts/: dev-setup.ps1  dev-setup.sh
scripts/demos/: agent_ui.py  simple_agent_demo.py  test_agent.py
scripts/hurl/: run.nu
src/: lib.rs  main.rs
src/agents/: configurable.rs  finance.rs  hr.rs  invoice.rs  mod.rs  orchestrator.rs  product.rs  registry.rs  router.rs  sales.rs  tenant_agent.rs
src/api/: mod.rs  routes.rs
src/api/handlers/: admin.rs  agents.rs  auth.rs  chat.rs  conversations.rs  deploy.rs  kasino.rs  kasno.rs  mod.rs  public.rs  rag.rs  research.rs  user_agents.rs  v1.rs  workflows.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/cli/: init.rs  mod.rs  output.rs
src/db/: agent_runs.rs  agent_versions.rs  alerts.rs  ares_vector.rs  audit_log.rs  chromadb.rs  lancedb.rs  mod.rs  pgvector.rs  pinecone.rs  postgres.rs  product_schema.rs  qdrant.rs  tenant_agents.rs  tenants.rs  tenants.rs_temp  traits.rs  turso.rs  vectorstore.rs
src/dcrm/: client.rs
src/dsprint/: recommend.rs
src/llm/: anthropic.rs  capabilities.rs  client.rs  coordinator.rs  llamacpp.rs  mod.rs  ollama.rs  openai.rs  pool.rs  provider_registry.rs
src/mcp/: auth.rs  client.rs  eruka_proxy.rs  mod.rs  registry.rs  server.rs  tools.rs  usage.rs
src/memory/: context_manager.rs  mod.rs
src/middleware/: api_key_auth.rs  mod.rs  usage.rs
src/models/: mod.rs  tenant.rs
src/rag/: cache.rs  chunker.rs  embeddings.rs  mod.rs  reranker.rs  search.rs
src/research/: coordinator.rs  mod.rs
src/tools/: calculator.rs  dcrm.rs  eruka.rs  mod.rs  pom.rs  registry.rs  search.rs
src/types/: mod.rs
src/utils/: config.rs  mod.rs  toml_config.rs  toon_config.rs
src/workflows/: engine.rs  mod.rs
tests/: api_tests.rs  cli_tests.rs  db_tests.rs  integration_toml_tests.rs  llm_tests.rs  ollama_integration_tests.rs  ollama_live_tests.rs  pool_tests.rs  rag_live_tests.rs  tool_calling_tests.rs  toon_integration_tests.rs
tests/common/: mocks.rs  mod.rs
tests/integration/: api_tests.rs
tests/unit/: llm_tests.rs
ui/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js
ui/src/: api.rs  lib.rs  main.rs  state.rs  types.rs
ui/src/components/: agent_selector.rs  chat_input.rs  chat_message.rs  header.rs  loading.rs  mod.rs  sidebar.rs
ui/src/pages/: chat.rs  home.rs  login.rs  mod.rs
