[package]
name = "ares-vector"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Pure-Rust embedded vector database with HNSW indexing for ARES"
license = "MIT"
repository = "https://github.com/dirmacs/ares"
keywords = ["vector", "database", "hnsw", "embedding", "similarity-search"]
categories = ["database", "algorithms", "science"]
authors = ["Dirmacs <build@dirmacs.com>"]

[features]
default = []

# Enable memory-mapped file support for large indices
mmap = ["dep:memmap2"]

# Enable SIMD optimizations (requires nightly or specific target features)
simd = []

# Enable binary serialization for more efficient persistence (serde is always available)
serde = ["dep:bincode"]

# Full feature set
full = ["mmap", "serde"]

[dependencies]
# Core HNSW implementation - pure Rust, no native deps
hnsw_rs = "0.3"

# Distance metrics for HNSW (from the same author)
anndists = "0.1"

# Scalable concurrent containers - async-safe HashMap
scc = "2"

# Thread-safe primitives (for internal Collection locking)
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Async runtime integration
tokio = { version = "1.48", features = ["sync", "fs", "io-util"] }

# Error handling
thiserror = "2.0"

# Unique identifiers
uuid = { version = "1.19", features = ["v4"] }

# Logging
tracing = "0.1"

# JSON serialization for persistence
serde_json = "1.0"

# Serialization for persistence (always needed for JSON ser/deser)
serde = { version = "1.0", features = ["derive"] }

# Binary serialization (optional, for more efficient persistence)
bincode = { version = "1.3", optional = true }

# Memory-mapped files (optional, for large indices)
memmap2 = { version = "0.9", optional = true }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["full", "test-util"] }
tempfile = "3.23"
rand = "0.9"
