[package]
name = "pawan"
version = "0.1.0"
edition = "2021"
description = "Pawan (рдкрд╡рди) - Self-healing, self-improving CLI coding agent"
license = "MIT"
repository = "https://github.com/dirmacs/ares"
authors = ["Dirmacs <build@dirmacs.com>"]
keywords = ["cli", "coding", "agent", "ai", "self-healing"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pawan"
path = "src/main.rs"

[lib]
name = "pawan"
path = "src/lib.rs"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tui-textarea"]

[dependencies]
# Core from workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP client for Ollama API
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# CLI
clap = { version = "4.5", features = ["derive", "color", "env"] }
owo-colors = "4.1"
dialoguer = "0.11"
indicatif = "0.17"

# TUI (optional but default)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
tui-textarea = { version = "0.7", optional = true }

# File operations
glob = "0.3"
ignore = "0.4"
walkdir = "2.5"
similar = "2.6"
regex = "1.12"

# Terminal output
syntect = "5.2"
termimad = "0.30"

# Async utilities
futures = "0.3"

# Configuration
toml = "0.8"

[dev-dependencies]
tempfile = "3.23"
rstest = "0.26"
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.6"
tokio-test = "0.4"
